# alphaearth-embeddings

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_extract_embeddings.ipynb  02_similarity_search.ipynb
scripts/: build_index.py  rebuild_index.py
src/aef/: api.py  config.py  ee_client.py  faiss_index.py  similarity.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.css  App.tsx  constants.ts  types.ts
web/src/components/: MapView.tsx  ResultsPanel.tsx  SettingsPanel.tsx
